fix spacing between labels.

--- a/openscholar/themes/cp_theme/css/cp_theme.css
+++ b/openscholar/themes/cp_theme/css/cp_theme.css
@@ -1236,7 +1236,7 @@ form#os-maintenance .form-item .description {
    }
 
 .ui-dialog.ap-settings-form #os_taxonomy .os-taxonomy_label_heading {
- margin: 0 0 8px 0;
+ margin: 0 0 16px 0;
 }
 
 .form-radios {
